ajustando página de evento e adicionando title à páginas

--- a/administrador/templates/administrador/editar_evento.html
+++ b/administrador/templates/administrador/editar_evento.html
@@ -2,6 +2,9 @@
 
 {% load widget_tweaks %}
 
+{% block title %}Editar Evento{% endblock %}
+
+
 {% block content %}
     <section class="section has-background-grey-lighter" style="min-height: 90vh;">
         {% if success_message %}
@@ -12,7 +15,7 @@
         {% endif %}
         <div class="container box" style="max-width: 950px; min-height: 80vh;">
             <h1 class="title has-text-centered has-icons-right is-2">
-                <span>Novo Evento</span>
+                <span>Editar Evento</span>
             </h1>
             <article class="panel is-dark" style="max-width: 720px; margin: 0 auto;">
                 <p class="panel-heading">
