--- a/eventos/templates/eventos/listagem-dias.html
+++ b/eventos/templates/eventos/listagem-dias.html
@@ -1,5 +1,8 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
+
+{% block title %}Editar | {{ evento.nome }}{% endblock %}
+
 {% block content %}
     <section class="section has-background-grey-lighter" style="min-height: 90vh;">
         <div class="container box" style="max-width: 950px; min-height: 80vh;">
