--- a/eventos/templates/eventos/novo-palestrante.html
+++ b/eventos/templates/eventos/novo-palestrante.html
@@ -1,5 +1,8 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
+
+{% block title %}Editar | {{ evento.nome }}{% endblock %}
+
 {% block content %}
     <section class="section has-background-grey-lighter" style="min-height: 90vh;">
         <div class="container box" style="max-width: 950px; min-height: 80vh;">
@@ -47,7 +50,6 @@
                             <div class="field">
                                 <p class="control is-expanded has-icons-left">
                                     {% render_field p_form.nome class="input" placeholder="Nome do palestrante" %}
-                                    {#                                    <input class="input" type="text" placeholder="Ex: Credenciamento">#}
                                     <span class="icon is-small is-left">
                                         <i class="fas fa-user"></i>
                                     </span>
@@ -66,12 +68,10 @@
                                 <div id="file-js-example" class="file has-name is-fullwidth">
                                     <label class="file-label">
                                         {% render_field p_form.foto class="file-input" name="resume" %}
-                                        {#                                            <input class="file-input" type="file" name="resume">#}
                                         <span class="file-cta">
                                                 <span class="file-icon">
                                                     <i class="fas fa-upload"></i>
                                                 </span>
-{#                                                <span class="file-label">Selecione</span>#}
                                             </span>
                                         <span class="file-name">Nenhum Arquivo Selecionado</span>
                                     </label>
@@ -83,15 +83,59 @@
 
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
-                            <label class="label">Link</label>
+                            <label class="label">Instagram</label>
                         </div>
                         <div class="field-body">
                             <div class="field">
                                 <p class="control is-expanded has-icons-left">
-                                    {% render_field p_form.link type="url" class="input" placeholder="Instagram, Facebook, Homepage..." %}
-                                    {#                                    <input class="input" type="url" placeholder="Instagram, Facebook, Homepage...">#}
+                                    {% render_field p_form.instagram type="url" class="input" placeholder="Link do Instagram" %}
                                     <span class="icon is-small is-left">
-                                        <i class="fas fa-link"></i>
+                                        <i class="fab fa-instagram"></i>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Linkedin</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <p class="control is-expanded has-icons-left">
+                                    {% render_field p_form.linkedin type="url" class="input" placeholder="Link do Linkedin" %}
+                                    <span class="icon is-small is-left">
+                                        <i class="fab fa-linkedin"></i>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Twitter</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <p class="control is-expanded has-icons-left">
+                                    {% render_field p_form.twitter type="url" class="input" placeholder="Link do Twitter" %}
+                                    <span class="icon is-small is-left">
+                                        <i class="fab fa-twitter"></i>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Email</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <p class="control is-expanded has-icons-left">
+                                    {% render_field p_form.email type="url" class="input" placeholder="Email de contato" %}
+                                    <span class="icon is-small is-left">
+                                        <i class="fas fa-envelope"></i>
                                     </span>
                                 </p>
                             </div>
@@ -107,9 +151,6 @@
                                 <div class="field">
                                     <div class="control">
                                         {% render_field p_form.resumo class="textarea" placeholder="Pequeno resumo sobre o palestrante" rows="2" %}
-{#                                        <textarea class="textarea"#}
-{#                                                  placeholder="Resumo sobre a apresentação do Palestrante"#}
-{#                                                  rows="2"></textarea>#}
                                     </div>
                                 </div>
                                 <p class="help is-pulled-right">300 caracteres</p>
@@ -124,8 +165,6 @@
                             <div class="field">
                                 <div class="control">
                                     {% render_field p_form.apresentacao class="textarea" placeholder="Texto que apresente o Palestrante de forma completa" %}
-{#                                    <textarea class="textarea"#}
-{#                                              placeholder="Texto que apresente o Palestrante de forma completa"></textarea>#}
                                 </div>
                             </div>
                         </div>
