--- a/eventos/templates/eventos/listagem-palestrantes.html
+++ b/eventos/templates/eventos/listagem-palestrantes.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 
+{% block title %}Editar | {{ evento.nome }}{% endblock %}
+
 {% block content %}
 
     <section class="section has-background-grey-lighter" style="min-height: 90vh;">
