--- a/eventos/templates/eventos/novo-patrocinador.html
+++ b/eventos/templates/eventos/novo-patrocinador.html
@@ -2,6 +2,8 @@
 
 {% load widget_tweaks %}
 
+{% block title %}Editar | {{ evento.nome }}{% endblock %}
+
 {% block content %}
     <section class="section has-background-grey-lighter" style="min-height: 90vh;">
         {% if success_message %}
